--- a/src/login.html
+++ b/src/login.html
@@ -5,14 +5,21 @@
     <title>Redux Easy Boilerplate</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" href="bundle.css"/>
     <link rel="shortcut icon" type="image/png" href="./src/images/favicon.png"/>
 </head>
 
 <body>
 <div id="root"></div>
+<h1>Hello</h1>
+
+<ul>
+    <li>foo</li>
+    <li>bar</li>
+    <li>bar888kkk</li>
+</ul>
+
 </body>
 
-<script src="bundle.js"></script>
+<script src="login.bundle.js"></script>
 
 </html>
