--- a/src/bus_overview.html
+++ b/src/bus_overview.html
@@ -2,11 +2,18 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Redux Easy Boilerplate</title>
+    <title>SUYUN 车联网监控平台</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" href="bundle.css"/>
-    <link rel="shortcut icon" type="image/png" href="./src/images/favicon.png"/>
+    <link rel="stylesheet" type="text/css" href="bus_overview.bundle.css"/>
+    <link rel="shortcut icon" type="image/png" href="/img/favicon.ico"/>
+
+    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+    <!--[if lt IE 9]>
+    <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
+    <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+    <![endif]-->
 </head>
 
 <body>
