--- a/src/login.html
+++ b/src/login.html
@@ -2,10 +2,11 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Redux Easy Boilerplate</title>
+    <title>SUYUN 车联网监控平台</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="shortcut icon" type="image/png" href="./src/images/favicon.png"/>
+    <link rel="shortcut icon" type="image/png" href="/img/favicon.ico"/>
+    <link rel="stylesheet" type="text/css" href="login.bundle.css"/>
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
