--- a/src/bus_overview.html
+++ b/src/bus_overview.html
@@ -1,25 +1,71 @@
 <html>
 
-<head>
-    <meta charset="utf-8">
-    <title>SUYUN 车联网监控平台</title>
-    <meta name="description" content="">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" href="bus_overview.bundle.css"/>
-    <link rel="shortcut icon" type="image/png" href="/img/favicon.ico"/>
+    <head>
+        <meta charset="utf-8">
+        <title>SUYUN 车联网监控平台</title>
+        <meta name="description" content="">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" type="text/css" href="bus_overview.bundle.css"/>
+        <link rel="shortcut icon" type="image/png" href="/img/favicon.ico"/>
 
-    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-    <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
-    <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
-</head>
+        <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+        <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+        <!--[if lt IE 9]>
+            <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
+            <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+        <![endif]-->
+    </head>
+    <body>
 
-<body>
-<div id="root"></div>
-</body>
+        <div class="background">
+            <div id="allmap"> </div>
+        </div>
 
-<script src="bus_overview.bundle.js"></script>
+        <!-- navbar -->
+        <nav class="navbar">
+            <div class="container">
+                <div class="navbar-header">
+                    <a class="navbar-brand" href="#">塑云科技LOGO</a>
+                </div>
+                <ul class="nav pull-right">
+                    <li class="nav-item active"><a href="#">车辆监控</a></li>
+                    <li class="nav-item"><a href="#">实时数据</a></li>
+                    <li class="nav-item"><a href="#">信息维护</a></li>
+                    <li class="nav-item"><a href="#">信息报表</a></li>
+                    <li class="nav-item"><a href="#">历史数据</a></li>
+                </ul>
+            </div>
+        </nav>
 
+        <!-- main -->
+        <div class="main">
+            <nav class="menubar">
+                <ul class="menu">
+                    <li class="menu-item"><a href="#">车辆基本信息</a></li>
+                    <li class="menu-item active"><a href="#">CAN</a></li>
+                </ul>
+                <a class="menu-trigger" href="#"> </a>
+            </nav>
+
+            <aside class="sidebar">
+                <a class="btn btn-toggle"></a>
+                <ul class="action-menu">
+                    <li class="menu-item"><a href="#" class="btn btn-create"></a></li>
+                    <li class="menu-item"><a href="#" class="btn btn-update"></a></li>
+                    <li class="menu-item"><a href="#" class="btn btn-delete"></a></li>
+                    <li class="menu-item"><a href="#" class="btn btn-query"></a></li>
+                </ul>
+            </aside>
+
+            <article class="main-content">
+                Skeleton uses media queries to serve its scalable grid, but also has a list of queries for convenience of styling your site across devices. The queries are mobile-first, meaning they target min-width. Mobile-first queries are how Skeleton's grid is built and is the preferrable method of organizing CSS. It means all styles outside of a query apply to all devices, then larger devices are targeted for enhancement. This prevents small devices from having to parse tons of unused CSS. The sizes for the queries are: 
+            </article>
+        </div>
+
+        <footer class="footer">
+            &copy; suyun technology 2016 
+        </footer>
+
+        <script src="bus_overview.bundle.js"></script>
+    </body>
 </html>
