--- a/src/login.html
+++ b/src/login.html
@@ -1,33 +1,45 @@
 <html>
+    <head>
+        <meta charset="utf-8">
+        <title>SUYUN 车联网监控平台</title>
+        <meta name="description" content="">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="shortcut icon" type="image/png" href="/img/favicon.ico"/>
+        <link rel="stylesheet" type="text/css" href="login.bundle.css"/>
 
-<head>
-    <meta charset="utf-8">
-    <title>SUYUN 车联网监控平台</title>
-    <meta name="description" content="">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="shortcut icon" type="image/png" href="/img/favicon.ico"/>
-    <link rel="stylesheet" type="text/css" href="login.bundle.css"/>
+        <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+        <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+        <!--[if lt IE 9]>
+            <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
+            <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+        <![endif]-->
+    </head>
+    <body>
 
-    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-        <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
-        <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
-</head>
-
-<body>
-<div id="root"></div>
-<h1>Hello</h1>
-
-<ul>
-    <li>foo</li>
-    <li>bar</li>
-    <li>bar</li>
-</ul>
-
-</body>
-
-<script src="login.bundle.js"></script>
-
+        <div class="background">
+        </div>
+        <div class="navbar">
+            <div class="container">
+                <div class="navbar-header">
+                    <a class="navbar-brand">LOGO</a>
+                    佛汽集团新能源汽车远程监控云平台
+                </div>
+            </div>
+        </div>
+        <div class="main">
+            <h1 class="title">用户登录</h1>
+            <form name="loginForm">
+                <div class="form-group">
+                    <label for="username"></label>
+                    <input type="text" id="username" placeholder="用户名"/>
+                </div>
+                <div class="form-group">
+                    <label for="password"></label>
+                    <input type="text" id="password" placeholder="密码"/>
+                </div>
+                <div class="button submit-btn"> 登录 </div>
+            </form>
+        </div>
+    </body>
+    <script src="login.bundle.js"></script>
 </html>
