--- a/src/bus_overview.html
+++ b/src/bus_overview.html
@@ -1,5 +1,4 @@
 <html>
-
     <head>
         <meta charset="utf-8">
         <title>SUYUN 车联网监控平台</title>
@@ -28,11 +27,9 @@
                     <a class="navbar-brand" href="#">塑云科技LOGO</a>
                 </div>
                 <ul class="nav pull-right">
-                    <li class="nav-item active"><a href="#">车辆监控</a></li>
-                    <li class="nav-item"><a href="#">实时数据</a></li>
-                    <li class="nav-item"><a href="#">信息维护</a></li>
-                    <li class="nav-item"><a href="#">信息报表</a></li>
-                    <li class="nav-item"><a href="#">历史数据</a></li>
+                    <li class="nav-item active"><a href="#">返回首页</a></li>
+                    <li class="nav-item"><a href="#">系统管理</a></li>
+                    <li class="nav-item"><a href="#">注销</a></li>
                 </ul>
             </div>
         </nav>
@@ -63,7 +60,7 @@
         </div>
 
         <footer class="footer">
-            &copy; suyun technology 2016 
+            Powered by Suyun360 &nbsp;&nbsp; &copy; Suyun360 Inc. All Rights Reserved
         </footer>
 
         <script src="bus_overview.bundle.js"></script>
