--- a/src/login.html
+++ b/src/login.html
@@ -18,7 +18,7 @@
 
         <div class="background">
         </div>
-        <div class="navbar">
+        <div class="header">
             <div class="container">
                 <div class="navbar-header">
                     <a class="navbar-brand">LOGO</a>
@@ -27,18 +27,24 @@
             </div>
         </div>
         <div class="main">
-            <h1 class="title">用户登录</h1>
-            <form name="loginForm">
-                <div class="form-group">
-                    <label for="username"></label>
-                    <input type="text" id="username" placeholder="用户名"/>
-                </div>
-                <div class="form-group">
-                    <label for="password"></label>
-                    <input type="text" id="password" placeholder="密码"/>
-                </div>
-                <div class="button submit-btn"> 登录 </div>
-            </form>
+            <div class="login-panel">
+                <h1 class="title">用户登录</h1>
+                <div class="seperator"> </div>
+                <form name="loginForm">
+                    <div class="form-group">
+                        <label for="username">
+                            <i class="fa fa-user" aria-hidden="true"></i>
+                        </label>
+                        <input type="text" id="username" placeholder="用户名"/>
+                    </div>
+                    <div class="form-group">
+                        <label for="password"></label>
+                        <input type="text" id="password" placeholder="密码"/>
+                    </div>
+                    <div class="button submit-btn"> <i class="fa fa-wifi fa-fw" aria-hidden="true"></i> 登录 </div>
+                </form>
+                <div class="seperator"> </div>
+            </div>
         </div>
     </body>
     <script src="login.bundle.js"></script>
