--- a/src/map.html
+++ b/src/map.html
@@ -7,7 +7,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="map.bundle.css"/>
     <link rel="shortcut icon" type="image/png" href="/img/favicon.ico"/>
-
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -15,12 +14,43 @@
     <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
 </head>
-
 <body>
-MAP
-<div id="root"></div>
+    <!-- background -->
+
+    <nav class="navbar">
+        <div class="container">
+            <div class="navbar-header">
+                <a class="navbar-brand" href="#">塑云科技LOGO</a>
+            </div>
+            <ul class="nav pull-right">
+                <li class="nav-item active"><a href="#">返回首页</a></li>
+                <li class="nav-item"><a href="#">系统管理</a></li>
+                <li class="nav-item"><a href="#">注销</a></li>
+            </ul>
+        </div>
+    </nav>
+
+    <div id="allmap"></div>
+
+    <aside class="sidebar">
+        <a class="btn btn-toggle"></a>
+        <ul class="action-menu">
+            <li class="menu-item">2016.10.29 10:50 粤B88888 启动</li>
+            <li class="menu-item">2016.10.29 10:50 粤B88888 故障</li>
+            <li class="menu-item">2016.10.29 10:50 粤B88888 故障</li>
+            <li class="menu-item">2016.10.29 10:50 粤B88888 启动</li>
+            <li class="menu-item">2016.10.29 10:50 粤B88888 故障</li>
+            <li class="menu-item">2016.10.29 10:50 粤B88888 启动</li>
+            <li class="menu-item">2016.10.29 10:50 粤B88888 故障</li>
+            <li class="menu-item">2016.10.29 10:50 粤B88888 启动</li>
+        </ul>
+    </aside>
+
+    <footer class="footer">
+        Powered by Suyun360 &nbsp;&nbsp; &copy; Suyun360 Inc. All Rights Reserved
+    </footer>
+
+    <script src="http://api.map.baidu.com/api?v=2.0&ak=t7Y9AyP4R14aQStKKCMeSV1R2zGEvwdf"></script>
+    <script src="map.bundle.js"></script>
 </body>
-
-<script src="map.bundle.js"></script>
-
 </html>
