--- a/src/bus_overview.html
+++ b/src/bus_overview.html
@@ -16,10 +16,6 @@
     </head>
     <body>
 
-        <div class="background">
-            <div id="allmap"> </div>
-        </div>
-
         <!-- navbar -->
         <nav class="navbar">
             <div class="container">
@@ -48,10 +44,11 @@
                     <div class="right-panel">
                         <!-- 车辆基本信息 -->
                         <div class="bus-info">
-                            
                         </div>
-
                         
+                        <!-- TAB页 -->
+                        <div class="tab-container">
+                        </div>
                     </div>
                 </div>
             </div>
