--- a/src/bus_overview.html
+++ b/src/bus_overview.html
@@ -17,72 +17,49 @@
     <body>
 
         <!-- navbar -->
-        <nav class="navbar">
-            <div class="container">
-                <div class="navbar-header">
-                    <a class="navbar-brand" href="#">塑云科技LOGO</a>
-                </div>
-                <ul class="nav pull-right">
-                    <li class="nav-item active"><a href="#">返回首页</a></li>
-                    <li class="nav-item"><a href="#">系统管理</a></li>
-                    <li class="nav-item"><a href="#">注销</a></li>
-                </ul>
-            </div>
-        </nav>
+        <!--<nav class="navbar">-->
+            <!--<div class="container">-->
+                <!--<div class="navbar-header">-->
+                    <!--<a class="navbar-brand" href="#">塑云科技LOGO</a>-->
+                <!--</div>-->
+                <!--<ul class="nav pull-right">-->
+                    <!--<li class="nav-item active"><a href="#">返回首页</a></li>-->
+                    <!--<li class="nav-item"><a href="#">系统管理</a></li>-->
+                    <!--<li class="nav-item"><a href="#">注销</a></li>-->
+                <!--</ul>-->
+            <!--</div>-->
+        <!--</nav>-->
 
-        <!-- main -->
-        <div class="main">
-            <div class="container">
-                <div class="main-content">
+        <!--&lt;!&ndash; main &ndash;&gt;-->
+        <!--<div class="main">-->
+            <!--<div class="container">-->
+                <!--<div class="main-content">-->
 
-                    <div class="left-panel">
-                        <!-- 车队 -->
-                        <div class="bus-list">
-                        </div>
-                    </div>
+                    <!--<div class="left-panel">-->
+                        <!--&lt;!&ndash; 车队 &ndash;&gt;-->
+                        <!--<div class="bus-list">-->
+                        <!--</div>-->
+                    <!--</div>-->
 
-                    <div class="right-panel">
-                        <!-- 车辆基本信息 -->
-                        <div class="bus-info">
-                        </div>
-                        
-                        <!-- TAB页 -->
-                        <div class="tab-container">
-                        </div>
-                    </div>
-                </div>
-            </div>
+                    <!--<div class="right-panel">-->
+                        <!--&lt;!&ndash; 车辆基本信息 &ndash;&gt;-->
+                        <!--<div class="bus-info">-->
+                        <!--</div>-->
 
-            <!-- 
-            <nav class="menubar">
-                <ul class="menu">
-                    <li class="menu-item"><a href="#">车辆基本信息</a></li>
-                    <li class="menu-item active"><a href="#">CAN</a></li>
-                </ul>
-                <a class="menu-trigger" href="#"> </a>
-            </nav>
+                        <!--&lt;!&ndash; TAB页 &ndash;&gt;-->
+                        <!--<div class="tab-container">-->
+                        <!--</div>-->
+                    <!--</div>-->
+                <!--</div>-->
+            <!--</div>-->
 
-            <aside class="sidebar">
-                <a class="btn btn-toggle"></a>
-                <ul class="action-menu">
-                    <li class="menu-item"><a href="#" class="btn btn-create"></a></li>
-                    <li class="menu-item"><a href="#" class="btn btn-update"></a></li>
-                    <li class="menu-item"><a href="#" class="btn btn-delete"></a></li>
-                    <li class="menu-item"><a href="#" class="btn btn-query"></a></li>
-                </ul>
-            </aside>
+        <!--</div>-->
 
-            <article class="main-content">
-                Skeleton uses media queries to serve its scalable grid, but also has a list of queries for convenience of styling your site across devices. The queries are mobile-first, meaning they target min-width. Mobile-first queries are how Skeleton's grid is built and is the preferrable method of organizing CSS. It means all styles outside of a query apply to all devices, then larger devices are targeted for enhancement. This prevents small devices from having to parse tons of unused CSS. The sizes for the queries are: 
-            </article>
-            -->
+        <!--<footer class="footer">-->
+            <!--Powered by Suyun360 &nbsp;&nbsp; &copy; Suyun360 Inc. All Rights Reserved-->
+        <!--</footer>-->
 
-            
-        </div>
-
-        <footer class="footer">
-            Powered by Suyun360 &nbsp;&nbsp; &copy; Suyun360 Inc. All Rights Reserved
-        </footer>
+        <div id="root"></div>
 
         <script src="bus_overview.bundle.js"></script>
     </body>
