add modal component and modify map_page

--- a/src/map.html
+++ b/src/map.html
@@ -35,20 +35,22 @@
     <aside class="sidebar">
         <a class="btn btn-toggle"></a>
         <ul class="action-menu">
-            <li class="menu-item">2016.10.29 10:50 粤B88888 启动</li>
-            <li class="menu-item">2016.10.29 10:50 粤B88888 故障</li>
-            <li class="menu-item">2016.10.29 10:50 粤B88888 故障</li>
-            <li class="menu-item">2016.10.29 10:50 粤B88888 启动</li>
-            <li class="menu-item">2016.10.29 10:50 粤B88888 故障</li>
-            <li class="menu-item">2016.10.29 10:50 粤B88888 启动</li>
-            <li class="menu-item">2016.10.29 10:50 粤B88888 故障</li>
-            <li class="menu-item">2016.10.29 10:50 粤B88888 启动</li>
+            <li class="menu-item normal"><img src="img/icons/normal.png"/> 2016.10.29 10:50 粤B88888 启动</a></li>
+            <li class="menu-item dead">2016.10.29 10:50 粤B88888 启动</li>
+            <li class="menu-item normal">2016.10.29 10:50 粤B88888 故障</li>
+            <li class="menu-item warn">2016.10.29 10:50 粤B88888 故障</li>
+            <li class="menu-item normal">2016.10.29 10:50 粤B88888 故障</li>
+            <li class="menu-item error">2016.10.29 10:50 粤B88888 启动</li>
+            <li class="menu-item error">2016.10.29 10:50 粤B88888 故障</li>
+            <li class="menu-item normal">2016.10.29 10:50 粤B88888 启动</li>
         </ul>
     </aside>
 
     <footer class="footer">
         Powered by Suyun360 &nbsp;&nbsp; &copy; Suyun360 Inc. All Rights Reserved
     </footer>
+
+    <div id="modal"></div>
 
     <script src="http://api.map.baidu.com/api?v=2.0&ak=t7Y9AyP4R14aQStKKCMeSV1R2zGEvwdf"></script>
     <script src="map.bundle.js"></script>
