--- a/src/login.html
+++ b/src/login.html
@@ -26,9 +26,9 @@
                 </div>
             </div>
         </div>
-        <div class="main">
+        <div id="main">
 
         </div>
     </body>
-    <script src="js/app/login.js"></script>
+    <script src="login.bundle.js"></script>
 </html>
